<resources>
    <string name="app_name">手机流量监控</string>
    <string name="traffic_title">流量监控</string>
    <string name="traffic_style_2g_3g">2G/3G流量</string>
    <string name="traffic_style_wifi">wifi流量</string>
    <string name="hour_now">当前小时</string>
    <string name="today">今日</string>
    <string name="send">发送:</string>
    <string name="receive">接收:</string>
    <string name="now">当前</string>
    <string name="choose_time">选择时间:</string>
    <string name="search">查询</string>
    <string name="hours">时间</string>
    <string name="receive_2g_3g">2G/3G接收</string>
    <string name="send_2g_3g">2G/3G发送</string>
    <string name="receive_wifi">Wifi接收</string>
    <string name="send_wifi">Wifi发送</string>
    <string name="zero_byte">0B</string>
    <string name="traffic_now">当前网速</string>
    <string name="statistic_form">报表统计</string>
    <string name="today_traffic">今日流量</string>
    <string name="graphical_text">图形统计</string>
    <string name="process_scan">进程监控</string>
    <string name="process_now">当前进程:</string>
    <string name="process_used">已用流量:</string>
    <string name="process_all_traffic">总流量</string>
    <string name="all">全部</string>
    <string name="month_now">当月</string>

</resources>
