<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/md_black_1000"
    android:orientation="vertical"
    android:paddingBottom="10sp"
    android:paddingEnd="5sp"
    android:paddingStart="5sp"
    android:paddingTop="16sp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/process_scan"
        android:textColor="@color/md_grey_500"
        android:textSize="32sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_white_1000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="1dp"
        android:paddingEnd="1dp">
        <Button
            android:id="@+id/bt_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/all"
            android:textColor="@color/md_green_800"/>
        <Button
            android:id="@+id/bt_hour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hour_now"
            android:textColor="@color/md_blue_400"/>
        <Button
            android:id="@+id/bt_today"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/today"
            android:textColor="@color/md_blue_400"/>
        <Button
            android:id="@+id/bt_month"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/month_now"
            android:textColor="@color/md_blue_400"/>
    </LinearLayout>
    <ListView
        android:id="@+id/list_process"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/list_items_process"/>
</LinearLayout>