<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal"
    android:background="@color/md_grey_600"
    android:padding="1dp">
    <ImageView
        android:id="@+id/process_icon"
        android:src="@drawable/statistic"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"/>
    <View
        android:layout_width="1dp"
        android:background="@color/md_black_1000"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:layout_weight="4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/process_now"
                android:textColor="@color/md_amber_600"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/process_name"
                android:text="@string/process_now"
                android:textColor="@color/md_white_1000"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/process_used"
                android:textColor="@color/md_amber_600"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/process_used"
                android:text="@string/zero_byte"
                android:textColor="@color/md_white_1000"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:text="@string/send"
                android:textColor="@color/md_amber_600"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:gravity="center"
                android:text="@string/zero_byte"
                android:id="@+id/process_send"
                android:layout_weight="1"
                android:textColor="@color/md_white_1000"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:gravity="center"
                android:text="@string/receive"
                android:textColor="@color/md_amber_600"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:gravity="center"
                android:text="@string/zero_byte"
                android:id="@+id/process_receive"
                android:textColor="@color/md_white_1000"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>